# nap_dummy

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: README.md  bag_cooked.launch  blackbox4.launch  blackbox4_bag.launch  blackbox4_live.launch  blackbox4_record.launch  blackbox4_stream.launch  bluefox_node.launch  calibrate_camera.launch  gps_plotter.launch  gui.py  nap_cooked.launch  point_gray.launch  sensor_suite.launch  test.launch  vins.launch  vins_n_nap.launch  viz_nodes.launch
msg/: NapMsg.msg  NapNodeMsg.msg  NapVisualEdgeMsg.msg
rviz/: euroc.rviz  my_pose_graph.rviz  nap_live_node.rviz  nuc_viz.rviz  toy_slam.rivz.rviz  viz_cmap.rviz  viz_gps.rviz
scripts/: ColorLUT.py  CoolWarmFloat257.csv  CoolWarmFloat33.csv  CoolWarmUChar257.csv  CoolWarmUChar33.csv  DistinctColorsUChar.csv  FastPlotter.py  FeatureFactory.py  GeometricVerification.py  GraphMerging.py  PlaceRecognitionNetvlad.py  Quaternion.py  colocation_viz.py  colocation_viz2.py  colocation_viz_lite.py  dry_dirichlet.py  dry_grid_filter.py  dry_particle_filter.py  gms_matcher.py  gps2odometry.py  heatmap.py  im_generator_kitti.py  im_generator_malaga.py  im_generator_segments.py  nap_daisy_bf.py  nap_debug_visualize.py  nap_debug_visualize_all_prev_cmap.py  nap_geom_node.py  nap_graph_modelling.py  nap_time_node.py  odometry2file.py  test_daisy.py  test_daisy_3way_matching.py  test_daisy_guided2.py  test_daisy_improve_dec2017.py  test_faiss.py  test_faiss2.py  test_geometric_verify.py  test_gps.py  test_graph_analysis.py  (+14 more)
src/: DataManager.h  DataManager_ceres.cpp  DataManager_core.cpp  DataManager_looppose_computation.cpp  DataManager_rviz_visualization.cpp  Edge.cpp  Edge.h  Node.cpp  Node.h  ceres_try.cpp  ceres_vertigo.cpp  dbow3_naive.cpp  (+3 more)
(+2 files in other folders)
